[gd_scene load_steps=21 format=2]

[ext_resource path="res://assets/beach.png" type="Texture" id=1]
[ext_resource path="res://entities/forest_piece.tscn" type="PackedScene" id=2]
[ext_resource path="res://entities/way_out.tscn" type="PackedScene" id=3]
[ext_resource path="res://components/anchor.gd" type="Script" id=4]
[ext_resource path="res://components/click.gd" type="Script" id=5]
[ext_resource path="res://entities/flags.gd" type="Script" id=6]
[ext_resource path="res://main.gd" type="Script" id=7]
[ext_resource path="res://entities/boat_driver_enter.gd" type="Script" id=8]
[ext_resource path="res://components/pause.gd" type="Script" id=9]
[ext_resource path="res://entities/hud.tscn" type="PackedScene" id=10]
[ext_resource path="res://entities/dash_board.tscn" type="PackedScene" id=11]
[ext_resource path="res://entities/pause_screen.tscn" type="PackedScene" id=12]
[ext_resource path="res://entities/dialog_screen.tscn" type="PackedScene" id=13]
[ext_resource path="res://assets/mockup.png" type="Texture" id=14]
[ext_resource path="res://components/control_clickable.tscn" type="PackedScene" id=15]

[sub_resource type="GDScript" id=1]
script/source = "extends Node2D

signal enable_visit
signal tuto_end

var tuto_state = 0
onready var pause_controller = $\"../pause\"
onready var dialog_screen = $\"../pause/dialog_screen\"

func _process(_dt):
    match tuto_state:
        0:
            dialog(\"tuto_1\")
        1:
            dialog(\"tuto_2\")
        3:
            emit_signal(\"enable_visit\")
            dialog(\"tuto_3\")
        5:
            dialog(\"tuto_4\")
        7:
            dialog(\"tuto_5\")

func dialog(name):
    dialog_screen.load_dialog(name)
    pause_controller.pause(pause_controller.DIALOG)

func _on_dialog_screen_continue_tuto() -> void:
    tuto_state += 1
    if tuto_state == 8:
        emit_signal(\"tuto_end\")

func build_docks():
    print(\"docks: \", tuto_state)
    if tuto_state == 2:
        tuto_state = 3
    
func boat_reached_dock():
    if tuto_state == 4:
        tuto_state = 5
    
func calling_back():
    if tuto_state == 6:
        tuto_state = 7

func loose_money():
    dialog(\"loose_money\")

func loose_eco():
    dialog(\"loose_eco\")

func win():
    dialog(\"win_money\")
"

[sub_resource type="Animation" id=2]
length = 2.0
tracks/0/type = "bezier"
tracks/0/path = NodePath(".:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( -103.471, -0.25, 0, 0.04, 100.295, 549.686, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 2 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath(".:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 717.533, -0.25, 0, 0.16, -120.04, 588.621, -1.28, -5.52747, 0.25, 0 ),
"times": PoolRealArray( 0, 2 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath(".:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 96.1825, -0.222885, -16, 0.355797, 9.57852, 90, -1.01536, -6.44595, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5, 1.7 )
}

[sub_resource type="Animation" id=3]
length = 2.0
tracks/0/type = "bezier"
tracks/0/path = NodePath(".:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 550.646, -0.25, 0, 0.25, 0, 554.076, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 2 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath(".:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 538.681, -0.25, 0, 0.25, 0, 288.327, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 2 )
}

[sub_resource type="Animation" id=4]
length = 60.0
loop = true
step = 1.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 15, 22, 30, 35, 53, 60 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 0.901961, 0.784314, 1 ), Color( 0.901961, 0.901961, 0.901961, 1 ), Color( 0.41, 0.48, 1, 1 ), Color( 0.411765, 0.478431, 1, 1 ), Color( 0.698039, 0.737255, 0.941176, 1 ), Color( 1.2, 1.2, 1, 1 ), Color( 1, 0.901961, 0.784314, 1 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("..")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 35 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "day_review"
} ]
}

[sub_resource type="CanvasItemMaterial" id=5]
blend_mode = 1

[node name="main" type="Node2D"]
script = ExtResource( 7 )
group_score_factor = 1.5
hype_factor = 0.005
satisfaction_factor = 3.0
mild_ticket = 20
expensive_ticket = 50

[node name="dialog_controller" type="Node2D" parent="."]
script = SubResource( 1 )

[node name="click" type="Node" parent="."]
script = ExtResource( 5 )

[node name="background" type="Node2D" parent="."]

[node name="Sprite" type="Sprite" parent="background"]
texture = ExtResource( 1 )
centered = false

[node name="sea_area" type="Area2D" parent="background/Sprite"]
visible = false

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="background/Sprite/sea_area"]
polygon = PoolVector2Array( -4.37756, 684.881, -6, 335, 143.822, 351.689, 275, 425, 368.525, 424.096, 463.694, 342.645, 552.861, 338.358, 687.469, 387.229, 854.657, 401.804, 947.755, 376.083, 1089.22, 375.225, 1208.4, 336.644, 1212.8, 684.881, 561.857, 694.871 )

[node name="way_out" parent="." instance=ExtResource( 3 )]
position = Vector2( 718, 68 )
scale = Vector2( 0.4, 0.4 )

[node name="boat_driver_enter" type="Position2D" parent="."]
position = Vector2( -103.471, 717.533 )
script = ExtResource( 8 )
__meta__ = {
"_gizmo_extents_": 100.0
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="boat_driver_enter"]
anims/enter = SubResource( 2 )

[node name="boat_exit" type="Position2D" parent="."]
position = Vector2( 1234.67, 671.291 )
rotation = 1.5708
script = ExtResource( 4 )
__meta__ = {
"_gizmo_extents_": 100.0
}

[node name="swiming_tourist_driver" type="Position2D" parent="."]
position = Vector2( 550.646, 538.681 )
__meta__ = {
"_gizmo_extents_": 100.0
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="swiming_tourist_driver"]
anims/swim_to_beach = SubResource( 3 )

[node name="sea_anchor" type="Position2D" parent="."]
position = Vector2( 549.686, 588.621 )
rotation = 1.5708
script = ExtResource( 4 )
__meta__ = {
"_gizmo_extents_": 100.0
}

[node name="boat_container" type="Node2D" parent="."]

[node name="tourist_targets" type="Node" parent="."]

[node name="t1" type="Position2D" parent="tourist_targets"]
position = Vector2( 435.473, 319.551 )

[node name="t2" type="Position2D" parent="tourist_targets"]
position = Vector2( 351.087, 270.217 )

[node name="t3" type="Position2D" parent="tourist_targets"]
position = Vector2( 483.604, 209.302 )

[node name="t4" type="Position2D" parent="tourist_targets"]
position = Vector2( 568.59, 170.04 )

[node name="t5" type="Position2D" parent="tourist_targets"]
position = Vector2( 636.575, 216.973 )

[node name="t6" type="Position2D" parent="tourist_targets"]
position = Vector2( 664.256, 128.525 )

[node name="t7" type="Position2D" parent="tourist_targets"]
position = Vector2( 692.248, 52.7115 )

[node name="t8" type="Position2D" parent="tourist_targets"]
position = Vector2( 724.906, 198.506 )

[node name="t9" type="Position2D" parent="tourist_targets"]
position = Vector2( 805.67, 257.077 )

[node name="t10" type="Position2D" parent="tourist_targets"]
position = Vector2( 859.547, 299.553 )

[node name="t12" type="Position2D" parent="tourist_targets"]
position = Vector2( 730.712, 277.249 )

[node name="t13" type="Position2D" parent="tourist_targets"]
position = Vector2( 466.116, 258.559 )

[node name="t14" type="Position2D" parent="tourist_targets"]
position = Vector2( 258.364, 297.646 )

[node name="docks" type="Node2D" parent="."]

[node name="dock_1" type="Position2D" parent="docks"]
position = Vector2( 536.211, 295.371 )

[node name="dock_2" type="Position2D" parent="docks"]
position = Vector2( 812.376, 363.961 )

[node name="dock_3" type="Position2D" parent="docks"]
position = Vector2( 344.058, 368.577 )
rotation = -0.375246

[node name="dock_4" type="Position2D" parent="docks"]
position = Vector2( 686.026, 332.373 )

[node name="dock_5" type="Position2D" parent="docks"]
position = Vector2( 946.849, 341.398 )

[node name="dock_6" type="Position2D" parent="docks"]
position = Vector2( 235.679, 350.423 )
rotation = 0.18675

[node name="dock_7" type="Position2D" parent="docks"]
position = Vector2( 1110.6, 323.284 )

[node name="dock_8" type="Position2D" parent="docks"]
position = Vector2( 62.5031, 298.729 )

[node name="tourists" type="Node2D" parent="."]

[node name="forest" type="Node2D" parent="."]

[node name="forest_piece" parent="forest" instance=ExtResource( 2 )]
position = Vector2( 122.814, 66.9639 )

[node name="forest_piece2" parent="forest" instance=ExtResource( 2 )]
position = Vector2( 479.601, 94.6648 )

[node name="forest_piece3" parent="forest" instance=ExtResource( 2 )]
position = Vector2( 110.626, 219.872 )

[node name="forest_piece4" parent="forest" instance=ExtResource( 2 )]
position = Vector2( 298.992, 21.5346 )

[node name="forest_piece5" parent="forest" instance=ExtResource( 2 )]
position = Vector2( 294.559, 157.823 )

[node name="forest_piece6" parent="forest" instance=ExtResource( 2 )]
position = Vector2( -42.2826, 135.662 )

[node name="forest_piece7" parent="forest" instance=ExtResource( 2 )]
position = Vector2( 568.244, -19.4627 )

[node name="forest_piece9" parent="forest" instance=ExtResource( 2 )]
position = Vector2( 905.086, 11.5622 )

[node name="forest_piece10" parent="forest" instance=ExtResource( 2 )]
position = Vector2( 1050.24, 110.177 )

[node name="forest_piece11" parent="forest" instance=ExtResource( 2 )]
position = Vector2( 1142.2, -13.9225 )

[node name="forest_piece12" parent="forest" instance=ExtResource( 2 )]
position = Vector2( 1230.85, 189.956 )

[node name="forest_piece13" parent="forest" instance=ExtResource( 2 )]
position = Vector2( 866.986, 162.016 )

[node name="forest_piece14" parent="forest" instance=ExtResource( 2 )]
position = Vector2( 1028.52, 258.978 )

[node name="flags" type="Node2D" parent="."]
position = Vector2( 1122.03, 636.83 )
script = ExtResource( 6 )

[node name="CanvasModulate" type="CanvasModulate" parent="."]
color = Color( 1, 0.901961, 0.784314, 1 )

[node name="day_night" type="AnimationPlayer" parent="CanvasModulate"]
autoplay = "daynight"
anims/daynight = SubResource( 4 )

[node name="hud" parent="." instance=ExtResource( 10 )]
light_mask = 2
material = SubResource( 5 )

[node name="pause_button" type="Sprite" parent="hud"]
position = Vector2( 2300.9, 191.498 )
texture = ExtResource( 14 )
region_enabled = true
region_rect = Rect2( 138.395, 673.128, 101.67, 108.83 )
__meta__ = {
"_edit_group_": true
}

[node name="in_play_clickable" parent="hud/pause_button" instance=ExtResource( 15 )]

[node name="Control" parent="hud/pause_button/in_play_clickable" index="1"]
margin_left = -44.0
margin_top = -44.0
margin_right = 43.0
margin_bottom = 40.0

[node name="shop_button" type="Sprite" parent="hud"]
position = Vector2( 60.0086, 165.347 )
texture = ExtResource( 14 )
region_enabled = true
region_rect = Rect2( 20.9728, 675.992, 103.102, 110.262 )
__meta__ = {
"_edit_group_": true
}

[node name="in_play_clickable" parent="hud/shop_button" instance=ExtResource( 15 )]

[node name="Control" parent="hud/shop_button/in_play_clickable" index="1"]
margin_left = -44.0
margin_top = -44.0
margin_right = 43.0
margin_bottom = 40.0

[node name="pause" type="Node2D" parent="."]
pause_mode = 2
script = ExtResource( 9 )

[node name="dash_board" parent="pause" instance=ExtResource( 11 )]
pause_mode = 2
visible = false

[node name="dialog_screen" parent="pause" instance=ExtResource( 13 )]
visible = false

[node name="pause_screen" parent="pause" instance=ExtResource( 12 )]
visible = false
[connection signal="enable_visit" from="dialog_controller" to="." method="_on_dialog_controller_enable_visit"]
[connection signal="tuto_end" from="dialog_controller" to="." method="_on_dialog_controller_tuto_end"]
[connection signal="animation_finished" from="boat_driver_enter/AnimationPlayer" to="." method="_on_boat_driver_entered"]
[connection signal="clicked" from="hud/pause_button/in_play_clickable" to="." method="_on_in_pause_button_clicked"]
[connection signal="clicked" from="hud/shop_button/in_play_clickable" to="." method="_on_in_shop_button_clicked"]
[connection signal="close" from="pause/dash_board" to="pause" method="_on_dash_board_close"]
[connection signal="close" from="pause/dash_board" to="." method="_on_dash_board_close"]
[connection signal="close" from="pause/dialog_screen" to="pause" method="_on_dialog_screen_close"]
[connection signal="continue_tuto" from="pause/dialog_screen" to="dialog_controller" method="_on_dialog_screen_continue_tuto"]
[connection signal="close" from="pause/pause_screen" to="pause" method="_on_pause_screen_close"]

[editable path="hud/pause_button/in_play_clickable"]

[editable path="hud/shop_button/in_play_clickable"]

[editable path="pause/dash_board"]

[editable path="pause/dialog_screen"]
